0.4.2, WIP:

0.4.1, 23.11.20: (separated due to long development pause - 23.11.20)
  - Track module:
    - fixed overview run bound definition to account for f within field width
    - reset focal run default step to 0.1 mm - effective maximum sweepable region is thus at 10 cm (max 1000 output files??).
      - For reasonable focusing (1.5m) and aberration (below 200 m lol), this seems good enough. Fix will come later.
    - on the frontend:
      - fixed .check_ray_fitting() plot axes, reversed plotting order again - high amounts of data obscure fits, better to have them in front.
    - added a run-label-based "make heads" wrapper
    - reset baseline focal distance to 1 m; since the fields are now assumed to always be 2m wide and the real focus will be somewhat further than 1 m anyway,
      this shouldn't be spamming warn_focus_in_field flags
    - added a method to drop labels from result storage
    - removed unused "inverted_r_sigma" toggle from .fit_focal_traj()


0.4.0, 21.10.20:
  - General:
    - Updated planning structures (project boards, milestones) to better reflect current perspective
    - renamed overview track preset to default, assuming potential tweaking by relevant routines; default max Runge-Kutta step set to 0.1 picosecond
    - Added trace strings to modules' messages
    - renamed units.py to aux.py, added replacement ceil() and floor() functions that allow "decimal spacing", adapted to the needs here
    - Ditched ASTRA's field smoothing in favor of a "rough" solution - just cut off "background" field at definition region's range.

  - ASTRA interface:
    - set default ASTRA verbosity to false
    - removed the concept of beam presets
    - .clean() no longer resets the beam
    - renamed field storage file from solenoid.dat to field.dat

  - Track presets:
    - Generator presets - left only uniform (ex line) and Gaussian (now flattened, max. 2D). Ring, b/c it doesn't bother.
    - Run configuration - disabled ASTRA's field smoothing
