@@ -1,10 +1,10 @@
 &newrun
     check_ref_part = .true.
     distribution = 'beam.ini'
-    h_max = 0.0001
+    h_max = 0.001
     h_min = 0.00
     head = 'Default solensim ASTRA run template'
-    max_step = 1000000
+    max_step = 2000000
     qbunch = 0.0
     run = 1
     track_all = .true.
@@ -32,9 +32,8 @@
 &solenoid
     file_bfield = 'field.dat'
     lbfield = .true.
-    maxb = 0.060855
     s_higher_order = .true.
     s_noscale = .true.
     s_pos = 1
-    s_smooth = 0
+    s_smooth = 3
 /
