@@ -134,4 +134,19 @@
   year      = {2016},
 }
 
+@Article{Floettmann2003,
+  author    = {Floettmann, Klaus},
+  title     = {Some basic features of the beam emittance},
+  doi       = {10.1103/PhysRevSTAB.6.034202},
+  issue     = {3},
+  pages     = {034202},
+  url       = {https://link.aps.org/doi/10.1103/PhysRevSTAB.6.034202},
+  volume    = {6},
+  journal   = {Phys. Rev. ST Accel. Beams},
+  month     = {Mar},
+  numpages  = {7},
+  publisher = {American Physical Society},
+  year      = {2003},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
